# yolo_inference

./: CMakeLists.txt  ReadMe.md  package.xml
include/yolo_inference/: inference.hpp
src/: inference.cpp
